--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ body{
     background-image: url(https://imgs.search.brave.com/Fq_sgBrCKlcX5VBid9GUArVbI-PsIuatwK5owY8D6q8/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly90NC5m/dGNkbi5uZXQvanBn/LzA4LzYyLzg4LzU5/LzM2MF9GXzg2Mjg4/NTk0OF9iT2dDZG9H/VXdkZktRWTlYd0tV/OXlMeVVvSTVKdDVo/ay5qcGc);
 
     background-repeat:no-repeat ;
+    background-size: cover;
 }
 
 .hb1{
